# librescl

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  index.html  params.json
doc/uml/: DevicePlugin.dia
doc/uml/code/: Device.cs  DeviceConnection.cs  DeviceDataRef.cs  DeviceDataSet.cs  DeviceGoExtRef.cs  DeviceGoose.cs  DeviceObject.cs  DeviceObjectRefence.cs  DeviceReport.cs
librescl/: Collections.vala  Device.vala  DeviceConnection.vala  DeviceDataRef.vala  DeviceDataSet.vala  DeviceGoExtRef.vala  DeviceGoose.vala  DeviceObject.vala  DeviceObjectRefence.vala  DeviceReport.vala  DuplicatedHashMap.vala  Enums.vala  IEDConnectedAP.vala  LN0.vala  Makefile.am  SCL.vala  SclDocument.vala  SclSerializable.vala  Serializable.vala  ThreeMap.vala  defaults.vala  initialization.vala  lscl-0.2.pc.in  lscl-0.4.deps  lscl-0.4.pc.in  lscl-0.6.pc.in  lscl-0.8.deps  lscl-0.8.pc.in  namespace-info.vala.in  tAbstractConductingEquipment.vala  tAbstractDataAttribute.vala  tAccessControl.vala  tAccessPoint.vala  tAddress.vala  tAnyContentFromOtherNamespace.vala  tAnyLN.vala  tAssociation.vala  tAssociationKind.vala  tAttributeName.vala  tBDA.vala  (+103 more)
plugins/: Makefile.am
plugins/default/: DeviceDefault.vala  DeviceDefaultConnection.vala  DeviceDefaultDataSet.vala  DeviceDefaultGoExtRef.vala  DeviceDefaultGoose.vala  DeviceDefaultReport.vala  Makefile.am
po/: POTFILES.in  POTFILES.skip  es.po
scripts/: Makefile.am  demo.py
test/: Makefile.am  Test.vala  collectionstest.vala  enums.vala  lscl-performance.vala  private-test.vala  pwm-goose-test.vala  read-file.vala  save-file.vala  tests-config.vala.in  xml-generation-tests.vala
test/tests-files/: communication-xmlns-tp.cid  communication.cid  data-type-template-coments.cid  data-type-template-datypes.cid  data-type-template.cid  generic.cid  header.cid  ied-complete.scd  ied-logcb-settingscb.cid  ied.cid  scl.cid
vapi/: Makefile.am  config.vapi
